Trimmed excess files

--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
 	</head>
 	<body>
 
-<!-- Awards brainstorm:
-	-	IBM Watson-Etihad Hackathon Winner
-	- RAK Fine Arts Festival 2016 opening exhibition selection
-	-
- -->
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
@@ -24,7 +19,7 @@
 							<p class="major"><!--[-->I'm a software engineer with a passion for editorial design.<!--]--></p>
 							<p>
 								I am currently pursuing a B.Sc. in Computer Science at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
-								I work as the lead front-end developer at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper.
+								I work as the lead front-end engineer at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper.
 								I am a former intern at <a href="http://bmas.agency/">BMAS Agency</a> and a current intern at <a href="https://www.honeywell.com/">Honeywell</a>.
 							</p>
 							<ul class="actions vertical">
@@ -70,7 +65,7 @@
 							<h2>Penni</h2>
 							<p>This is a chatbot designed to enhance the in-flight experience by adding assistive technologies and an integrated flight attendant portal. Penni is built on IBM Watson cognitive computing technology and it was the winning project at the IBM Watson-Etihad Airways hackathon in November 2016.</p>
 							<ul class="actions vertical">
-								<li><a href="https://github.com/zanemountcastle/peanuts" class="button">Learn More</a></li>
+								<li><a href="https://github.com/projectPenni/penni" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -81,7 +76,7 @@
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
-							<p>For more information or to contact me, please visit the links below.</p>
+							<p>For more information, please visit the links below.</p>
 							<ul class="icons">
 								<li><a href="https://github.com/zanemountcastle" class="icon style2 fa-github"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.behance.net/zanemountcastle" class="icon style2 fa-behance"><span class="label">Twitter</span></a></li>
