--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<!-- Google Analytics -->
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		  ga('create', 'UA-76195984-1', 'auto');
+		  ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 
@@ -18,7 +28,7 @@
 							<h1>Hello, I'm Zane</h1>
 							<p class="major"><!--[-->I'm a software engineer with a passion for editorial design.<!--]--></p>
 							<p>
-								I am currently pursuing a B.Sc. in Computer Science at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
+								I am currently pursuing a B.Sc. in Computer Science with a minor in Mathematics at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
 								I work as the lead front-end engineer at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper.
 								I am a former intern at <a href="http://bmas.agency/">BMAS Agency</a> and a current intern at <a href="https://www.honeywell.com/">Honeywell</a>.
 							</p>
@@ -27,7 +37,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/zane.jpg" alt="" />
+							<img src="images/zane-min.jpg" alt="" />
 						</div>
 					</section>
 
@@ -37,11 +47,11 @@
 							<h2>The Gazelle</h2>
 							<p>I am the current lead front-end engineer at  <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper with over 10,000 monthly readers. I led the design and development effort of the current user interface. I now lead a team of student designers and developers using a technology stack including React, React Router, Webpack, Node.js, Express, and Falcor.</p>
 							<ul class="actions vertical">
-								<li><a href="https://github.com/thegazelle-ad/gazelle-server" class="button">Learn More</a></li>
+								<li><a href="https://github.com/thegazelle-ad/gazelle-server" class="button">View Source</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/gazelle.jpg" alt="" />
+							<img src="images/gazelle-min.jpg" alt="" />
 						</div>
 					</section>
 
@@ -49,13 +59,13 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Faces of Elmina</h2>
-							<p>The Emina Slave Castle was the first European trading post in Sub-Saharan Africa. It became one of the main points of departure in the Transatlantic Slave Trade. The book explores the residents of Elmina's residual relationship with the legacy of the Elmina Slave Castle through a series interviews and photographs.</p>
+							<p>The Emina Slave Castle was the first European trading post in Sub-Saharan Africa. It became one of the main points of departure in the Transatlantic Slave Trade. This book explores the residents of Elmina's residual relationship with the legacy of the Elmina Slave Castle through a series interviews and photographs.</p>
 							<ul class="actions vertical">
-								<li><a href="https://www.behance.net/gallery/33547555/Faces-of-Elmina" class="button">Learn More</a></li>
+								<li><a href="https://www.behance.net/gallery/33547555/Faces-of-Elmina" class="button">See More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/elmina.jpg" alt="" />
+							<img src="images/elmina-min.jpg" alt="" />
 						</div>
 					</section>
 
@@ -65,11 +75,11 @@
 							<h2>Penni</h2>
 							<p>This is a chatbot designed to enhance the in-flight experience by adding assistive technologies and an integrated flight attendant portal. Penni is built on IBM Watson cognitive computing technology and it was the winning project at the IBM Watson-Etihad Airways hackathon in November 2016.</p>
 							<ul class="actions vertical">
-								<li><a href="https://github.com/projectPenni/penni" class="button">Learn More</a></li>
+								<li><a href="https://github.com/projectPenni/penni" class="button">View Source</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/penni.png" alt="" />
+							<img src="images/penni-min.jpg" alt="" />
 						</div>
 					</section>
 
