Changed intro button text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								I am a former intern at <a href="http://bmas.agency/">BMAS Agency</a> and a current intern at <a href="https://www.honeywell.com/">Honeywell</a>.
 							</p>
 							<ul class="actions vertical">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">My Work</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">Recent Projects</a></li>
 							</ul>
 						</div>
 						<div class="image">
