--- a/index.html
+++ b/index.html
@@ -70,18 +70,32 @@
 					</section>
 
 				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Penni</h2>
-							<p>This is a chatbot designed to enhance the in-flight experience by adding assistive technologies and an integrated flight attendant portal. Penni is built on IBM Watson cognitive computing technology and it was the winning project at the IBM Watson-Etihad Airways hackathon in November 2016.</p>
-							<ul class="actions vertical">
-								<li><a href="https://github.com/projectPenni/penni" class="button">View Source</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/penni-min.jpg" alt="" />
-						</div>
-					</section>
+				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<div class="content">
+						<h2>Flowmoji</h2>
+						<p>This project builds mass-surveillance resistance into the <a href="https://whispersystems.org/">Signal</a> iOS application by quietly sending bogus messages between chatters. In doing so, MITM attackers quickly exhaust their resources since only a small portion of intercepted messages decrypted using brute-force or exploiting as-of-yet unknown weaknesses in the Signal protocol will prove fruitful.</p>
+						<ul class="actions vertical">
+							<li><a href="https://github.com/zanemountcastle/flowmoji" class="button">View Source</a></li>
+						</ul>
+					</div>
+					<div class="image">
+						<img src="images/flowmoji.jpg" alt="" />
+					</div>
+				</section>
+
+				<!-- Five -->
+				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<div class="content">
+						<h2>Penni</h2>
+						<p>This is a chatbot designed to enhance the in-flight experience by adding assistive technologies and an integrated flight attendant portal. Penni is built on IBM Watson cognitive computing technology and it was the winning project at the IBM Watson-Etihad Airways hackathon in November 2016.</p>
+						<ul class="actions vertical">
+							<li><a href="https://github.com/projectPenni/penni" class="button">View Source</a></li>
+						</ul>
+					</div>
+					<div class="image">
+						<img src="images/penni-min.jpg" alt="" />
+					</div>
+				</section>
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
