Clarified Flowmoji description

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
 						<h2>Flowmoji</h2>
-						<p>This project builds mass-surveillance resistance into the <a href="https://whispersystems.org/">Signal</a> iOS application by quietly sending bogus messages between chatters. In doing so, MITM attackers quickly exhaust their resources since only a small portion of intercepted messages decrypted using brute-force or exploiting as-of-yet unknown weaknesses in the Signal protocol will prove fruitful.</p>
+						<p>This project builds mass-surveillance resistance into the <a href="https://whispersystems.org/">Signal</a> iOS application by sending bogus messages between chatters in the background. In doing so, MITM attackers quickly exhaust their resources since only a small portion of intercepted messages decrypted using brute-force or exploiting as-of-yet unknown weaknesses in the Signal protocol will prove fruitful.</p>
 						<ul class="actions vertical">
 							<li><a href="https://github.com/zanemountcastle/flowmoji" class="button">View Source</a></li>
 						</ul>
