--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 							<h1>Hello, I'm Zane</h1>
 							<p class="major"><!--[-->I'm a software engineer with a passion for editorial design.<!--]--></p>
 							<p>
-								I am currently pursuing a B.Sc. in Computer Science with a minor in Mathematics at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
+								I am currently pursuing a B.Sc. in Computer Science with minors in Mathematics and Interactive Media at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
 								I work as the lead front-end engineer at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper.
-								I am a former intern at <a href="http://bmas.agency/">BMAS Agency</a> and a current intern at <a href="https://www.honeywell.com/">Honeywell</a>.
+								I am a former Web Development Intern at <a href="http://bmas.agency/">BMAS Agency</a> and a current Industrial IoT Intern at <a href="https://www.honeywell.com/">Honeywell</a> where I work on the Sentince Edge IoT platform.
 							</p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Recent Projects</a></li>
@@ -45,9 +45,10 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>The Gazelle</h2>
-							<p>I am the current lead front-end engineer at  <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper with over 10,000 monthly readers. I led the design and development effort of the current user interface. I now lead a team of student designers and developers using a technology stack including React, React Router, Webpack, Node.js, Express, and Falcor.</p>
-							<ul class="actions vertical">
+							<p>I am the current lead front-end engineer at  <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper with over 12,000 monthly readers. I led the design and development effort of the current user interface. I now lead a team of student designers and developers using a technology stack including React, React Router, Webpack, Node.js, Express, and Falcor.</p>
+							<ul class="actions horizontal">
 								<li><a href="https://github.com/thegazelle-ad/gazelle-server" class="button">View Source</a></li>
+								<li><a href="https://www.thegazelle.org/" class="button">Read The Gazelle</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -85,6 +86,20 @@
 
 				<!-- Five -->
 				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<div class="content">
+						<h2>Sniffer</h2>
+						<p>This project is designed to expose the personal information individuals' devices are constantly publishing without their knowledge or consent. Sniffer continously queries the Wi-Fi networks for publically broadcasted mDNS-SD packets with information including the device's name. Sniffer parses these packets using regex for human names and speaks these names aloud.</p>
+						<ul class="actions vertical">
+							<li><a href="https://github.com/zanemountcastle/sniffer" class="button">View Source</a></li>
+						</ul>
+					</div>
+					<div class="image">
+						<img src="images/sniffer-min.png" alt="" />
+					</div>
+				</section>
+
+				<!-- Six -->
+				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
 						<h2>Penni</h2>
 						<p>This is a chatbot designed to enhance the in-flight experience by adding assistive technologies and an integrated flight attendant portal. Penni is built on IBM Watson cognitive computing technology and it was the winning project at the IBM Watson-Etihad Airways hackathon in November 2016.</p>
