--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 								I work as the lead front-end engineer at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper.
 								I am a former Web Development Intern at <a href="http://bmas.agency/">BMAS Agency</a> and a current Industrial IoT Intern at <a href="https://www.honeywell.com/">Honeywell</a> where I work on the Sentince Edge IoT platform.
 							</p>
-							<ul class="actions vertical">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Recent Projects</a></li>
+							<ul class="actions horizontal">
+								<li><a href="#gazelle" class="button big wide smooth-scroll-middle">Recent Projects</a></li>
+								<li><a href="assets/documents/zane-mountcastle-resume.pdf" class="button big wide smooth-scroll-middle">Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -42,7 +43,7 @@
 					</section>
 
 				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="gazelle">
 						<div class="content">
 							<h2>The Gazelle</h2>
 							<p>I am the current lead front-end engineer at  <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper with over 12,000 monthly readers. I led the design and development effort of the current user interface. I now lead a team of student designers and developers using a technology stack including React, React Router, Webpack, Node.js, Express, and Falcor.</p>
