--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<p>
 								I am currently pursuing a B.Sc. in Computer Science with minors in Mathematics and Interactive Media at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
 								I work as the lead front-end engineer at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper.
-								I am a former Web Development Intern at <a href="http://bmas.agency/">BMAS Agency</a> and a current Industrial IoT Intern at <a href="https://www.honeywell.com/">Honeywell</a> where I work on the Sentince Edge IoT platform.
+								I am a former Web Development Intern at <a href="http://bmas.agency/">BMAS Agency</a> and a current Software Engineering Intern at <a href="https://www.honeywell.com/">Honeywell</a> where I work on the Sentince Edge Industrial IoT platform.
 							</p>
 							<ul class="actions horizontal">
 								<li><a href="#gazelle" class="button big wide smooth-scroll-middle">Recent Projects</a></li>
