Added résumé accents for clarity

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							</p>
 							<ul class="actions horizontal">
 								<li><a href="#gazelle" class="button big wide smooth-scroll-middle">Recent Projects</a></li>
-								<li><a href="assets/documents/zane-mountcastle-resume.pdf" class="button big wide smooth-scroll-middle">Resume</a></li>
+								<li><a href="assets/documents/zane-mountcastle-resume.pdf" class="button big wide smooth-scroll-middle">Résumé</a></li>
 							</ul>
 						</div>
 						<div class="image">
