--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 					<section class="banner style1 orient-left content-align-left image-position-left fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Hello, I'm Zane</h1>
-							<p class="major"><!--[-->I'm a software engineer with a passion for editorial design.<!--]--></p>
+							<p class="major"><!--[-->I'm a software engineer with a passion for product design.<!--]--></p>
 							<p>
 								I am currently pursuing a B.Sc. in Computer Science with minors in Mathematics and Interactive Media at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
 								I work as the lead front-end engineer at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper.
-								I am a former Web Development Intern at <a href="http://bmas.agency/">BMAS Agency</a> and a current Software Engineering Intern at <a href="https://www.honeywell.com/">Honeywell</a> where I work on the Sentince Edge Industrial IoT platform.
+								I am a former Web Development Intern at <a href="http://bmas.agency/">BMAS Agency</a> and a current Software Engineering Intern at <a href="https://www.honeywell.com/">Honeywell</a> where I work on the Sentience Edge Industrial IoT platform.
 							</p>
 							<ul class="actions horizontal">
 								<li><a href="#gazelle" class="button big wide smooth-scroll-middle">Recent Projects</a></li>
@@ -46,6 +46,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="gazelle">
 						<div class="content">
 							<h2>The Gazelle</h2>
+							<h3><i>Product design for 1,050 clients representing 110 nationalities</i></h3>
 							<p>I am the current lead front-end engineer at  <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper with over 12,000 monthly readers. I led the design and development effort of the current user interface. I now lead a team of student designers and developers using a technology stack including React, React Router, Webpack, Node.js, Express, and Falcor.</p>
 							<ul class="actions horizontal">
 								<li><a href="https://github.com/thegazelle-ad/gazelle-server" class="button">View Source</a></li>
@@ -61,7 +62,8 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Faces of Elmina</h2>
-							<p>The Emina Slave Castle was the first European trading post in Sub-Saharan Africa. It became one of the main points of departure in the Transatlantic Slave Trade. This book explores the residents of Elmina's residual relationship with the legacy of the Elmina Slave Castle through a series interviews and photographs.</p>
+							<h3><i>An photojournalistic examination of the cultural residue of slavery</i></h3>
+							<p>The Emina Slave Castle was the first European trading post in Sub-Saharan Africa. It became one of the main points of departure in the Transatlantic Slave Trade. This book explores the residents of Elmina's residual relationship with the legacy of the Elmina Slave Castle through a series of interviews and photographs.</p>
 							<ul class="actions vertical">
 								<li><a href="https://www.behance.net/gallery/33547555/Faces-of-Elmina" class="button">See More</a></li>
 							</ul>
@@ -75,7 +77,8 @@
 				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
 						<h2>Flowmoji</h2>
-						<p>This project builds mass-surveillance resistance into the <a href="https://whispersystems.org/">Signal</a> iOS application by sending bogus messages between chatters in the background. In doing so, MITM attackers quickly exhaust their resources since only a small portion of intercepted messages decrypted using brute-force or exploiting as-of-yet unknown weaknesses in the Signal protocol will prove fruitful.</p>
+						<h3><i>A private messaging application with added mass-surveilance resistance</i></h3>
+						<p>This project builds mass-surveillance resistance into the <a href="https://whispersystems.org/">Signal</a> iOS application by sending bogus messages between chatters in the background. As a result, MITM attackers quickly exhaust their resources since only a small portion of intercepted messages that are decrypted using brute-force or exploiting as-of-yet unknown weaknesses in the Signal protocol will contain real, usable content.</p>
 						<ul class="actions vertical">
 							<li><a href="https://github.com/zanemountcastle/flowmoji" class="button">View Source</a></li>
 						</ul>
@@ -89,6 +92,7 @@
 				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
 						<h2>Sniffer</h2>
+						<h3><i>Exposing the unseen privacy infringements of the wireless world</i></h3>
 						<p>This project is designed to expose the personal information individuals' devices are constantly publishing without their knowledge or consent. Sniffer continously queries the Wi-Fi networks for publically broadcasted mDNS-SD packets with information including the device's name. Sniffer parses these packets using regex for human names and speaks these names aloud.</p>
 						<ul class="actions vertical">
 							<li><a href="https://github.com/zanemountcastle/sniffer" class="button">View Source</a></li>
@@ -103,6 +107,7 @@
 				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
 						<h2>Penni</h2>
+						<h3><i>An intelligent end-to-end virtual travel assistant</i></h3>
 						<p>This is a chatbot designed to enhance the in-flight experience by adding assistive technologies and an integrated flight attendant portal. Penni is built on IBM Watson cognitive computing technology and it was the winning project at the IBM Watson-Etihad Airways hackathon in November 2016.</p>
 						<ul class="actions vertical">
 							<li><a href="https://github.com/projectPenni/penni" class="button">View Source</a></li>
