--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<h1>Hello, I'm Zane</h1>
 							<p class="major"><!--[-->I'm a software engineer with a passion for product design.<!--]--></p>
 							<p>
-								I am currently pursuing a B.Sc. in Computer Science with minors in Mathematics and Interactive Media at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
+								I am currently pursuing a B.Sc. in Computer Science with minors in Applied Mathematics and Interactive Media at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
 								I work as the Front-end Software Engineer Team Lead at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper.
 								Formerly, I was a Web Development Intern at <a href="http://bmas.agency/">BMAS Agency</a> and a Software Engineer Intern at <a href="https://www.honeywell.com/">Honeywell</a>.
 							</p>
