Added Mission Mule section

--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<!-- One -->
+				<!-- Intro -->
 					<section class="banner style1 orient-left content-align-left image-position-left fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Hello, I'm Zane</h1>
-							<p class="major"><!--[-->I'm a software engineer with a passion for product design.<!--]--></p>
+							<p class="major">I build products for journalism and environmental conservation.</p>
 							<p>
-								I am currently pursuing a B.Sc. in Computer Science with minors in Mathematics and Interactive Media at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
-								I work as the Front-end Software Engineer Team Lead at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper.
+								I am currently pursuing a B.Sc. in Computer Science with minors in Applied Mathematics and Interactive Media at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
+								I am CTO at <a href="http://missionmule.com/">Mission Mule</a>, a startup building drones for environmental conservation.
+								I am also a founding engineer and currently a Software Engineer Team Lead at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper.
 								Formerly, I was a Web Development Intern at <a href="http://bmas.agency/">BMAS Agency</a> and a Software Engineer Intern at <a href="https://www.honeywell.com/">Honeywell</a>.
 							</p>
 							<ul class="actions horizontal">
@@ -42,12 +43,27 @@
 						</div>
 					</section>
 
-				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="gazelle">
+					<!-- Mission Mule -->
+						<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="gazelle">
+							<div class="content">
+								<h2>Mission Mule</h2>
+								<h3><i>Drones for environmental conservation</i></h3>
+								<p>At Mission Mule, I helped design and build an end-to-end remote data gathering solution using an integrated system of ground stations and long-range drone technology. Our current focus is on gathering data from long-term deployed, motion-activated camera traps for facilitation of animal conservation efforts in national parks and wildlands across the world. Mission Mule has recently been awarded a multi-year contract from the US Department of Defense's <a href="https://www.serdp-estcp.org/">Environmental Research Program.</a></p>
+								<ul class="actions horizontal">
+									<li><a href="http://missionmule.com/" class="button">Learn More</a></li>
+								</ul>
+							</div>
+							<div class="image">
+								<img src="images/mm-min.jpg" alt="" />
+							</div>
+						</section>
+
+				<!-- The Gazelle -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="gazelle">
 						<div class="content">
 							<h2>The Gazelle</h2>
 							<h3><i>Product design for 1,050 clients representing 110 nationalities</i></h3>
-							<p>I am the current lead front-end engineer at  <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper with over 12,000 monthly readers. I led the design and development effort of the current user interface. I now lead a team of student designers and developers using a technology stack including React, React Router, Webpack, Node.js, Express, and Falcor.</p>
+							<p>I am the current lead front-end engineer at  <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper with over 13,000 monthly readers. I led the design and development effort of the current user interface. I now lead a team of student designers and developers using a technology stack including React, React Router, Webpack, Node.js, Express, and Falcor.</p>
 							<ul class="actions horizontal">
 								<li><a href="https://github.com/thegazelle-ad/gazelle-server" class="button">View Source</a></li>
 								<li><a href="https://www.thegazelle.org/" class="button">Read The Gazelle</a></li>
@@ -58,8 +74,8 @@
 						</div>
 					</section>
 
-				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+				<!-- Faces of Elmina -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Faces of Elmina</h2>
 							<h3><i>An photojournalistic examination of the cultural residue of slavery</i></h3>
@@ -73,8 +89,8 @@
 						</div>
 					</section>
 
-				<!-- Four -->
-				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+				<!-- Flowmoji -->
+				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
 						<h2>Flowmoji</h2>
 						<h3><i>A private messaging application with added mass-surveilance resistance</i></h3>
@@ -88,8 +104,8 @@
 					</div>
 				</section>
 
-				<!-- Five -->
-				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+				<!-- Sniffer -->
+				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
 						<h2>Sniffer</h2>
 						<h3><i>Exposing the unseen privacy infringements of the wireless world</i></h3>
@@ -100,21 +116,6 @@
 					</div>
 					<div class="image">
 						<img src="images/sniffer-min.png" alt="" />
-					</div>
-				</section>
-
-				<!-- Six -->
-				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-					<div class="content">
-						<h2>Penni</h2>
-						<h3><i>An intelligent end-to-end virtual travel assistant</i></h3>
-						<p>This is a chatbot designed to enhance the in-flight experience by adding assistive technologies and an integrated flight attendant portal. Penni is built on IBM Watson cognitive computing technology and it was the winning project at the IBM Watson-Etihad Airways hackathon in November 2016.</p>
-						<ul class="actions vertical">
-							<li><a href="https://github.com/projectPenni/penni" class="button">View Source</a></li>
-						</ul>
-					</div>
-					<div class="image">
-						<img src="images/penni-min.jpg" alt="" />
 					</div>
 				</section>
 
