Edited Mission Mule blurb for active voice

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<div class="content">
 								<h2>Mission Mule</h2>
 								<h3><i>Drones for environmental conservation</i></h3>
-								<p>I currently work as CTO of Mission Mule, a startup offering an end-to-end remote data gathering solution using an integrated system of ground stations and long-range drone technology. Our current focus is on gathering data from long-term deployed, motion-activated camera traps for facilitation of animal conservation efforts in national parks and wildlands across the world. Mission Mule has recently been awarded a multi-year contract from the US Department of Defense's <a href="https://www.serdp-estcp.org/">Environmental Research Program.</a></p>
+								<p>I currently work as CTO of Mission Mule, a startup offering an end-to-end remote data gathering solution using an integrated system of ground stations and long-range drone technology. Our current focus is on gathering data from long-term deployed, motion-activated camera traps for facilitation of animal conservation efforts in national parks and wildlands across the world. Mission Mule was awarded a multi-year contract from the US Department of Defense's <a href="https://www.serdp-estcp.org/">Environmental Research Program.</a></p>
 								<ul class="actions horizontal">
 									<li><a href="http://missionmule.com/" class="button">Learn More</a></li>
 								</ul>
