Added thesis section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<h1>Hello, I'm Zane</h1>
 							<p class="major">I build products for journalism and environmental conservation.</p>
 							<p>
-								I am currently pursuing a B.Sc. in Computer Science with minors in Applied Mathematics and Interactive Media at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
+								I am currently finishing up a B.Sc. in Computer Science with minors in Applied Mathematics and Interactive Media at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
 								I am CTO at <a href="http://missionmule.com/">Mission Mule</a>, a startup building drones for environmental conservation.
 								I am also a founding engineer and currently a Software Engineer Team Lead at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper.
 								Formerly, I was a Web Development Intern at <a href="http://bmas.agency/">BMAS Agency</a> and a Software Engineer Intern at <a href="https://www.honeywell.com/">Honeywell</a>.
@@ -74,11 +74,23 @@
 						</div>
 					</section>
 
+					<!-- Capstone-->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="gazelle">
+						<div class="content">
+							<h2>Strengthened Authentication Infrastructure for Public Wireless Networks</h2>
+							<h3><i>Undergraduate senior thesis</i></h3>
+							<p>The drastic increase in Wi-Fi compatible mobile devices in recent years has been complimented by the widespread adoption of open Wi-Fi networks in public venues including cafés, hotels, and, increasingly, commercial airplanes. For my undergradate senior thesis project, I am researching and proposing a solution to a security vulnerability that I discovered the "captive portal" client authentication infrastructure of these networks.</p>
+						</div>
+						<div class="image">
+							<img src="images/thesis.jpg" alt="" />
+						</div>
+					</section>
+
 				<!-- Faces of Elmina -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Faces of Elmina</h2>
-							<h3><i>An photojournalistic examination of the cultural residue of slavery</i></h3>
+							<h3><i>A photojournalistic examination of the cultural residue of slavery</i></h3>
 							<p>The Emina Slave Castle was the first European trading post in Sub-Saharan Africa. It became one of the main points of departure in the Transatlantic Slave Trade. This book explores the residents of Elmina's residual relationship with the legacy of the Elmina Slave Castle through a series of interviews and photographs.</p>
 							<ul class="actions vertical">
 								<li><a href="https://www.behance.net/gallery/33547555/Faces-of-Elmina" class="button">See More</a></li>
@@ -90,7 +102,7 @@
 					</section>
 
 				<!-- Flowmoji -->
-				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
 						<h2>Flowmoji</h2>
 						<h3><i>A private messaging application with added mass-surveilance resistance</i></h3>
@@ -105,7 +117,7 @@
 				</section>
 
 				<!-- Sniffer -->
-				<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
 						<h2>Sniffer</h2>
 						<h3><i>Exposing the unseen privacy infringements of the wireless world</i></h3>
