Added thesis section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<div class="content">
 							<h2>Strengthened Authentication Infrastructure for Public Wireless Networks</h2>
 							<h3><i>Undergraduate senior thesis</i></h3>
-							<p>The drastic increase in Wi-Fi compatible mobile devices in recent years has been complimented by the widespread adoption of open Wi-Fi networks in public venues including cafés, hotels, and, increasingly, commercial airplanes. For my undergradate senior thesis project, I am researching and proposing a solution to a security vulnerability that I discovered the "captive portal" client authentication infrastructure of these networks.</p>
+							<p>The drastic increase in Wi-Fi compatible mobile devices in recent years has been complimented by the widespread adoption of open Wi-Fi networks in public venues including cafés, hotels, and, increasingly, commercial airplanes. For my undergradate senior thesis, I am researching and proposing a solution to a security vulnerability that I discovered the "captive portal" client authentication infrastructure of these networks.</p>
 						</div>
 						<div class="image">
 							<img src="images/thesis.jpg" alt="" />
