--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<p>
 								I am currently finishing up a B.Sc. in Computer Science with minors in Applied Mathematics and Interactive Media at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
 								I am CTO at <a href="http://missionmule.com/">Mission Mule</a>, a startup building drones for environmental conservation.
-								I am also a founding engineer and currently a Software Engineer Team Lead at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper.
+								I am also a founding engineer and currently a Software Engineer Team Lead at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper and its corresponding custom publication platform.
 								Formerly, I was a Web Development Intern at <a href="http://bmas.agency/">BMAS Agency</a> and a Software Engineer Intern at <a href="https://www.honeywell.com/">Honeywell</a>.
 							</p>
 							<ul class="actions horizontal">
@@ -79,7 +79,7 @@
 						<div class="content">
 							<h2>Strengthened Authentication Infrastructure for Public Wireless Networks</h2>
 							<h3><i>Undergraduate senior thesis</i></h3>
-							<p>The drastic increase in Wi-Fi compatible mobile devices in recent years has been complimented by the widespread adoption of open Wi-Fi networks in public venues including cafés, hotels, and, increasingly, commercial airplanes. For my undergradate senior thesis, I am researching and proposing a solution to a security vulnerability that I discovered the "captive portal" client authentication infrastructure of these networks.</p>
+							<p>The drastic increase in Wi-Fi compatible mobile devices in recent years has been complimented by the widespread adoption of open Wi-Fi networks in public venues including cafés, hotels, and, increasingly, commercial airplanes. For my undergradate senior thesis, I propose a solution to a security vulnerability that I discovered in the captive portal client authentication infrastructure of these networks.</p>
 						</div>
 						<div class="image">
 							<img src="images/thesis.jpg" alt="" />
