Clarified button message

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								Formerly, I was a Web Development Intern at <a href="http://bmas.agency/">BMAS Agency</a> and a Software Engineer Intern at <a href="https://www.honeywell.com/">Honeywell</a>.
 							</p>
 							<ul class="actions horizontal">
-								<li><a href="#gazelle" class="button big wide smooth-scroll-middle">Recent Projects</a></li>
+								<li><a href="#gazelle" class="button big wide smooth-scroll-middle">Selected Projects</a></li>
 								<li><a href="assets/documents/zane-mountcastle-resume.pdf" class="button big wide smooth-scroll-middle">Résumé</a></li>
 							</ul>
 						</div>
