Updated intro text

--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
 							<h1>Hello, I'm Zane</h1>
 							<p class="major">I build products for journalism and environmental conservation.</p>
 							<p>
-								I am currently finishing up a B.Sc. in Computer Science with minors in Applied Mathematics and Interactive Media at <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
-								I am CTO at <a href="http://missionmule.com/">Mission Mule</a>, a startup building drones for environmental conservation.
-								I am also a founding engineer and currently a Software Engineer Team Lead at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper and its corresponding custom publication platform.
-								Formerly, I was a Web Development Intern at <a href="http://bmas.agency/">BMAS Agency</a> and a Software Engineer Intern at <a href="https://www.honeywell.com/">Honeywell</a>.
+								I recently graduated with B.Sc. in Computer Science with minors in Applied Mathematics and Interactive Media from <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
+								I am currently CTO at <a href="https://www.missionmule.com/">Mission Mule</a>, a startup offering drone-enabled remote sensing for remote areas.
+								In the past, I've built a full-stack publication platform at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper and I've also worked on high performance industrial IoT software at <a href="www.honeywell.com">Honeywell</a>.
 							</p>
 							<ul class="actions horizontal">
 								<li><a href="#gazelle" class="button big wide smooth-scroll-middle">Selected Projects</a></li>
