Added Person schema

--- a/index.html
+++ b/index.html
@@ -16,6 +16,43 @@
 		  ga('create', 'UA-76195984-1', 'auto');
 		  ga('send', 'pageview');
 		</script>
+
+		<script type="application/ld+json">
+			{
+			  "@context" : "http://schema.org",
+			  "@type" : "Person",
+				"birthDate": "1996-01-13",
+				"birthPlace": "St. Pete Beach, FL",
+				"jobTitle" : "CTO of Mission Mule",
+				"worksFor": {
+			    "@type": "Organization",
+			    "name": "Mission Mule",
+			    "url": "https://www.missionmule.com/",
+			    "address": {
+			      "@type": "PostalAddress",
+			      "addressLocality": "San Leandro",
+						"addressRegion" : "CA"
+			    }
+			  },
+				"email" : "zane@zanemountcastle.com",
+				"url" : "https://www.zanemountcastle.com",
+				"alumniOf" : "alumniOf": {
+			    "@type": "CollegeOrUniversity",
+			    "name": "New York University Abu Dhabi",
+			    "url": "https://nyuad.nyu.edu/en/",
+			    "sameAs": "https://en.wikipedia.org/wiki/New_York_University_Abu_Dhabi"
+			  },
+			  "image" : "https://www.zanemountcastle.com/images/zane-mountcastle-icon.jpg",
+				"givenName" : "Zane",
+				"familyName" : "Mountcastle",
+				"description" : "Zane Mountcastle is CTO of Mission Mule, a startup promising access to data from any device, anywhere.",
+				"address": {
+	        "@type": "PostalAddress",
+	        "addressLocality": "San Leandro",
+	        "addressRegion": "CA"
+	      },
+			}
+		</script>
 	</head>
 	<body>
 
@@ -30,7 +67,7 @@
 							<p>
 								I recently graduated with B.Sc. in Computer Science with minors in Applied Mathematics and Interactive Media from <a href="http://nyuad.nyu.edu/">NYU Abu Dhabi</a>.
 								I am currently CTO at <a href="https://www.missionmule.com/">Mission Mule</a>, a startup offering drone-enabled remote sensing for remote areas.
-								In the past, I've built a full-stack publication platform at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper and I've also worked on high performance industrial IoT software at <a href="www.honeywell.com">Honeywell</a>.
+								In the past, I've built a full-stack publication platform at <a href="https://www.thegazelle.org/">The Gazelle</a>, NYU Abu Dhabi's independent student newspaper and I've also worked on high performance industrial IoT software at <a href="http://www.honeywell.com">Honeywell</a>.
 							</p>
 							<ul class="actions horizontal">
 								<li><a href="#gazelle" class="button big wide smooth-scroll-middle">Selected Projects</a></li>
@@ -78,7 +115,7 @@
 						<div class="content">
 							<h2>Strengthened Authentication Infrastructure for Public Wireless Networks</h2>
 							<h3><i>Undergraduate senior thesis</i></h3>
-							<p>The drastic increase in Wi-Fi compatible mobile devices in recent years has been complimented by the widespread adoption of open Wi-Fi networks in public venues including cafés, hotels, and, increasingly, commercial airplanes. For my undergradate senior thesis, I propose a solution to a security vulnerability that I discovered in the captive portal client authentication infrastructure of these networks.</p>
+							<p>The drastic increase in Wi-Fi compatible mobile devices in recent years has been complemented by the widespread adoption of open Wi-Fi networks in public venues including cafés, hotels, and, increasingly, commercial airplanes. For my undergradate senior thesis, I propose a solution to a security vulnerability that I discovered in the captive portal client authentication infrastructure of these networks.</p>
 						</div>
 						<div class="image">
 							<img src="images/thesis.jpg" alt="" />
