Added social links

--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
 	        "addressLocality": "San Leandro",
 	        "addressRegion": "CA"
 	      },
+				sameAs: [
+					https://www.facebook.com/zanemountcastle,
+					https://www.instagram.com/zanemountcastle,
+					https://www.linkedin.com/in/zanemountcastle/,
+					https://www.behance.net/zanemountcastle,
+					https://twitter.com/zanemountcastle
+				]
 			}
 		</script>
 	</head>
