Fixed sameAs error

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	        "addressLocality": "San Leandro",
 	        "addressRegion": "CA"
 	      },
-				sameAs: [
+				"sameAs": [
 					https://www.facebook.com/zanemountcastle,
 					https://www.instagram.com/zanemountcastle,
 					https://www.linkedin.com/in/zanemountcastle/,
