Fixed alumniOf error

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			  },
 				"email" : "zane@zanemountcastle.com",
 				"url" : "https://www.zanemountcastle.com",
-				"alumniOf" : "alumniOf": {
+				"alumniOf" : {
 			    "@type": "CollegeOrUniversity",
 			    "name": "New York University Abu Dhabi",
 			    "url": "https://nyuad.nyu.edu/en/",
